implement load_to_postgres as a separate dag

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -430,6 +430,65 @@
     "empty_issn_publications = publications[publications['ISSN'].isna()]\n",
     "empty_issn_publications.count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Authors', 'Author full names', 'Author(s) ID', 'Title', 'Year',\n",
+       "       'Source title', 'Volume', 'Issue', 'Art. No.', 'Page start', 'Page end',\n",
+       "       'Page count', 'DOI', 'Link', 'Affiliations',\n",
+       "       'Authors with affiliations', 'Author Keywords', 'Index Keywords',\n",
+       "       'Editors', 'Publisher', 'ISSN', 'ISBN', 'CODEN', 'PubMed ID',\n",
+       "       'Language of Original Document', 'Document Type', 'Source', 'EID'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../data/raw/scopus_all/2023.csv')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create individual boolean conditions\n",
+    "bool1 = df['Affiliations'].apply(lambda x: 'faculty' in x.lower())\n",
+    "bool2 = df['Affiliations'].apply(lambda x: 'science' in x.lower())\n",
+    "bool5 = df['Affiliations'].apply(lambda x: 'marrakech' in x.lower())\n",
+    "\n",
+    "bool3 = df['Affiliations'].apply(lambda x: 'faculté' in x.lower())\n",
+    "bool4 = df['Affiliations'].apply(lambda x: 'science' in x.lower())\n",
+    "# bool3 = df['affiliation_full_name'].apply(lambda x: 'technique' in x.lower())\n",
+    "# bool3 = df['city'] == 'Marrakech'\n",
+    "\n",
+    "# Combine the two conditions\n",
+    "bool_combined = bool1 & bool2 & bool5\n",
+    "\n",
+    "out = df[bool_combined]['Affiliations']\n",
+    "out.to_csv(\"output/out.csv\")"
+   ]
   }
  ],
  "metadata": {
